add css practice section

--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@
       </section>
 
       <section id="myworks" class="wrapper">
-        <h2 class="section-title">Git Hub</h2>
+        <h2 class="section-title">CSS Practice</h2>
         <ul>
           <li>
-            <h3 class="content-title">Diary by Syfmony</h3>
-            <a href="https://github.com/kj7779/symfony-heroku/tree/yarn"><p>git hub</p></a>
-            <a href="http://obscure-garden-70339.herokuapp.com/public/diary/list">website</a>
-            <p>SymfonyでDiaryを作成してHerokuにアップしました。</p>
+            <h3 class="content-title">My Cafe</h3>
+            <img src="img/my-cafe.PNG" alt="my-cafe">
+            <a href="https://github.com/kj7779/css-practice-my-cafe"><p>git hub</p></a>
+            <a href="https://kj7779.github.io/css-practice-my-cafe/">website</a>
+            <p>CafeのTopページを作成しました。</p>
           </li>
           
         </ul>
@@ -113,16 +114,17 @@
         <li>CANVA</li>
         <li>weibo</li>
         <li>RED</li>
-        <li>Cu</li>
+        <li>Cap Cut</li>
       </ul>
     </div>
       </section>    
 
       <section id="myworks" class="wrapper">
-        <h2 class="section-title">Other Skills</h2>
+        <h2 class="section-title">LanguagesLanguages</h2>
       <ul>
-        <li>英語</li>
-        <li>中国語</li>
+        <li>English</li>
+        <li>Chinese</li>
+        <li>Japanese</li>
       </ul>
     </div>
       </section>  
