--- a/index.html
+++ b/index.html
@@ -8,25 +8,61 @@
     <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-    <header id="header" class="wrapper-header">
-      <h1 class="site-title">Koji's Portfolio</h1>
-      <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#myworks">My Works</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#service">Service</a></li>
-        </ul>
+    <div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <div class="header-position">
+              <div>
+                <a class="navbar-brand" href="#">Koji's Portfolio</a>
+            </div>
+
+          <div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#my-works">My Works</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#css-practice">CSS Practice</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Skills
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#programming">Programming</a></li>
+                    <li><a class="dropdown-item" href="#application">Application</a></li>
+                    <li><a class="dropdown-item" href="#language">Language</a></li>
+                   <!-- <li><hr class="dropdown-divider"></li>
+                    <!--<li><a class="dropdown-item" href="#">Contact Me</a></li> -->
+                  </ul>
+                </li>
+              </ul>
+              <!---- <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form> -->
+            </div>
+          </div>
+        </div>
       </nav>
-    </header>
+    </div>
 
     <main>
+      
       <div id="mainvisual">
         <img src="img/mainvisual.jpg" alt="main">
       </div>
@@ -45,7 +81,7 @@
         </div>
       </section>
 
-      <section id="myworks" class="wrapper">
+      <section id="my-works" class="wrapper">
         <h2 class="section-title">My Works</h2>
         <ul>
           <li>
@@ -72,7 +108,7 @@
         </ul>
       </section>
 
-      <section id="myworks" class="wrapper">
+      <section id="css-practice" class="wrapper">
         <h2 class="section-title">CSS Practice</h2>
         <ul>
           <li>
@@ -87,7 +123,7 @@
       </section>
 
 
-      <section id="experience" class="wrapper">
+      <section id="programming" class="wrapper">
         <h2 class="section-title">Programming Skills</h2>
       <ul>
         <li>PHP</li>
@@ -108,8 +144,8 @@
     </div>
       </section>
 
-      <section id="myworks" class="wrapper">
-        <h2 class="section-title">My experience of App</h2>
+      <section id="apprication" class="wrapper">
+        <h2 class="section-title">Apprication</h2>
       <ul>
         <li>CANVA</li>
         <li>weibo</li>
@@ -119,8 +155,8 @@
     </div>
       </section>    
 
-      <section id="myworks" class="wrapper">
-        <h2 class="section-title">LanguagesLanguages</h2>
+      <section id="language" class="wrapper">
+        <h2 class="section-title">Language</h2>
       <ul>
         <li>English</li>
         <li>Chinese</li>
