--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   </head>
 
   <body>
-    <div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <div class="header-position">
@@ -25,7 +24,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-
+          </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
@@ -46,7 +45,7 @@
                     <li><a class="dropdown-item" href="#application">Application</a></li>
                     <li><a class="dropdown-item" href="#language">Language</a></li>
                    <!-- <li><hr class="dropdown-divider"></li>
-                    <!--<li><a class="dropdown-item" href="#">Contact Me</a></li> -->
+                    <li><a class="dropdown-item" href="#">Contact Me</a></li> -->
                   </ul>
                 </li>
               </ul>
@@ -58,11 +57,10 @@
           </div>
         </div>
       </nav>
-    </div>
 
     <main>
       
-      <div id="mainvisual">
+      <div class="mainvisual">
         <img src="img/mainvisual.jpg" alt="main">
         <p>Hello, I'm an engineer.</p>
       </div>
@@ -74,7 +72,7 @@
             <h3 class="content-title">Hello. My Name is Koji.</h3>
             <p>
               I study programing, English, Mandarin and Yoga.<br>
-              I startded working in IT industry from last year.<br>
+              I started working in IT industry from last year.<br>
               I hope to help other person by using my skills.
             </p>
           </div>
@@ -144,7 +142,7 @@
     </div>
       </section>
 
-      <section id="apprication" class="wrapper">
+      <section id="application" class="wrapper">
         <h2 class="section-title">Apprication</h2>
       <ul>
         <li>CANVA</li>
@@ -152,7 +150,6 @@
         <li>RED</li>
         <li>Cap Cut</li>
       </ul>
-    </div>
       </section>    
 
       <section id="language" class="wrapper">
@@ -162,7 +159,6 @@
         <li>Chinese</li>
         <li>Japanese</li>
       </ul>
-    </div>
       </section>  
     </main>
 
