--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </head>
 
   <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+      <nav class=" navbar-margin navbar navbar-expand-lg navbar-light">
+
           <div class="header-position">
               <div>
                 <a class="navbar-brand" href="#">Koji's Portfolio</a>
@@ -24,81 +24,83 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-          </div>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#my-works">My Works</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#css-practice">CSS Practice</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Skills
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#programming">Programming</a></li>
-                    <li><a class="dropdown-item" href="#application">Application</a></li>
-                    <li><a class="dropdown-item" href="#language">Language</a></li>
-                   <!-- <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Contact Me</a></li> -->
-                  </ul>
-                </li>
-              </ul>
-              <!---- <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form> -->
+
+                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                          <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#about">About</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#my-works">My Works</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#css-practice">CSS Practice</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#css-practice">Experience</a>
+                          </li>
+
+
+          <!--                <li class="nav-item dropdown">-->
+          <!--                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
+          <!--                    Skills-->
+          <!--                  </a>-->
+          <!--                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+          <!--                    <li><a class="dropdown-item" href="#programming">Programming</a></li>-->
+          <!--                    <li><a class="dropdown-item" href="#application">Application</a></li>-->
+          <!--                    <li><a class="dropdown-item" href="#language">Language</a></li>-->
+                             <!-- <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item" href="#">Contact Me</a></li> -->
+          <!--                  </ul>-->
+          <!--                </li>-->
+                        </ul>
+                        <!---- <form class="d-flex">
+                          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                          <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form> -->
+                      </div>
+
             </div>
           </div>
-        </div>
       </nav>
 
     <main>
-      
-      <div class="mainvisual">
-        <img src="img/mainvisual.jpg" alt="main">
-        <p>Hello, I'm an engineer.</p>
-      </div>
+        <img class="main-visual"src="img/mainvisual.jpg" alt="main">
+<!--        <p>Hello, I'm an engineer.</p>-->
 
-      <section id="about" class="wrapper">
+      <section id="about" class="">
         <h2 class="section-title">About</h2>
         <div class="content">
-          <div class="text">
-            <h3 class="content-title">Hello. My Name is Koji.</h3>
             <p>
+              Hello. My Name is Koji.<br>
               I study programing, English, Mandarin and Yoga.<br>
               I started working in IT industry from last year.<br>
               I hope to help other person by using my skills.
             </p>
-          </div>
         </div>
       </section>
 
-      <section id="my-works" class="wrapper2">
+      <section id="my-works">
         <h2 class="section-title">My Works</h2>
         <ul>
           <li>
             <a href="http://dry-hiji-8315.deci.jp/myPage/Portfolio/typing_lyric/index.php">
-            <h3 class="content-title">Typing Lyrics Practice</h3>
+            <h5 class="content-title">Typing Lyrics Practice</h5>
             <img src="img/typing.PNG" alt="テキストテキストテキスト">
             <p>好きな洋楽アーティストの歌詞でタイピング練習できます。</p>
            </a>
           </li>
           <li>
             <a href="http://dry-hiji-8315.deci.jp/myPage/Portfolio/typing_lyric/index.php">
-            <h3 class="content-title">Wish List</h3>
+            <h5 class="content-title">Wish List</h5>
             <img src="img/wish-list.PNG" alt="wish-list">
-            <p>サークルなどで欲しいものを共有することができます。username:admin password:adminでログインできます。</p>
+            <p>サークルなどで欲しいものを共有することができます。</p>
+              <p class="text-center">username:admin<br>password:admin</p>
             </a>
           </li>
           <li>
             <a href="http://dry-hiji-8315.deci.jp/myPage/Portfolio/webDic_web1.2/webDic_web.php">
-            <h3 class="content-title">English Dictionary</h3>
+            <h5 class="content-title">English Dictionary</h5>
             <img src="img/dictionary.PNG" alt="dictionary">
             <p>英語辞書です。画像がでなくなったので修正中です。</p>
             </a>
@@ -106,22 +108,23 @@
         </ul>
       </section>
 
-      <section id="css-practice" class="wrapper">
+      <section id="css-practice">
         <h2 class="section-title">CSS Practice</h2>
         <ul>
           <li>
             <h3 class="content-title">My Cafe</h3>
             <img src="img/my-cafe.PNG" alt="my-cafe">
-            <a href="https://github.com/kj7779/css-practice-my-cafe"><p>git hub</p></a>
             <a href="https://kj7779.github.io/css-practice-my-cafe/">website</a>
-            <p>CafeのTopページを作成しました。</p>
+            <br>
+            <a href="https://github.com/kj7779/css-practice-my-cafe">git hub</a>
+            <p class="text-center">CafeのTopページを作成しました。</p>
           </li>
           
         </ul>
       </section>
 
 
-      <section id="programming" class="wrapper">
+      <section id="experience">
         <h2 class="section-title">Programming Skills</h2>
       <ul>
         <li>PHP</li>
@@ -136,21 +139,9 @@
         <li>Twitter API</li>
         <li>Arudino</li>
         <li>mySQL</li>
-        <li>Git</li>
         <li>Heroku</li>
       </ul>
-    </div>
       </section>
-
-      <section id="application" class="wrapper">
-        <h2 class="section-title">Apprication</h2>
-      <ul>
-        <li>CANVA</li>
-        <li>weibo</li>
-        <li>RED</li>
-        <li>Cap Cut</li>
-      </ul>
-      </section>    
 
       <section id="language" class="wrapper">
         <h2 class="section-title">Language</h2>
