fix css and footer

--- a/index.html
+++ b/index.html
@@ -13,56 +13,36 @@
   </head>
 
   <body>
-      <nav class=" navbar-margin navbar navbar-expand-lg navbar-light">
+  <div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Koji's Portfolio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <div class="header-position">
-              <div>
-                <a class="navbar-brand" href="#">Koji's Portfolio</a>
-            </div>
-
-          <div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                          <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#about">About</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#my-works">My Works</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#css-practice">CSS Practice</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#css-practice">Experience</a>
-                          </li>
-
-
-          <!--                <li class="nav-item dropdown">-->
-          <!--                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
-          <!--                    Skills-->
-          <!--                  </a>-->
-          <!--                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-          <!--                    <li><a class="dropdown-item" href="#programming">Programming</a></li>-->
-          <!--                    <li><a class="dropdown-item" href="#application">Application</a></li>-->
-          <!--                    <li><a class="dropdown-item" href="#language">Language</a></li>-->
-                             <!-- <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Contact Me</a></li> -->
-          <!--                  </ul>-->
-          <!--                </li>-->
-                        </ul>
-                        <!---- <form class="d-flex">
-                          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                          <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form> -->
-                      </div>
-
-            </div>
-          </div>
-      </nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#my-works">My Works</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#css-practice">CSS Practice</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#experience">Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#language">Language</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
 
     <main>
         <img class="main-visual"src="img/mainvisual.jpg" alt="main">
@@ -78,11 +58,20 @@
               I hope to help other person by using my skills.
             </p>
         </div>
+        <hr>
       </section>
 
       <section id="my-works">
         <h2 class="section-title">My Works</h2>
         <ul>
+          <li>
+            <h5 class="content-title">Diary</h5>
+            <img src="img/diary.PNG" alt="diary">
+            <a href="https://obscure-garden-70339.herokuapp.com/public/diary/list">website</a>
+            <br>
+            <a href="https://github.com/kj7779/symfony-heroku">git hub</a>
+            <p class="text-center">CafeのTopページを作成しました。</p>
+          </li>
           <li>
             <a href="http://dry-hiji-8315.deci.jp/myPage/Portfolio/typing_lyric/index.php">
             <h5 class="content-title">Typing Lyrics Practice</h5>
@@ -106,26 +95,27 @@
             </a>
           </li>
         </ul>
+        <hr>
       </section>
 
       <section id="css-practice">
         <h2 class="section-title">CSS Practice</h2>
         <ul>
           <li>
-            <h3 class="content-title">My Cafe</h3>
+            <h5 class="content-title">My Cafe</h5>
             <img src="img/my-cafe.PNG" alt="my-cafe">
             <a href="https://kj7779.github.io/css-practice-my-cafe/">website</a>
             <br>
             <a href="https://github.com/kj7779/css-practice-my-cafe">git hub</a>
             <p class="text-center">CafeのTopページを作成しました。</p>
           </li>
-          
         </ul>
+        <hr>
       </section>
 
 
       <section id="experience">
-        <h2 class="section-title">Programming Skills</h2>
+        <h2 class="section-title">Experience</h2>
       <ul>
         <li>PHP</li>
         <li>Java Script</li>
@@ -153,8 +143,8 @@
       </section>  
     </main>
 
-    <footer id="footer">
-      <p>&copy; 2020 Profile</p>
+    <footer class="footer">
+      <p>&copy; 2023 Koji's Portfolio</p>
     </footer>
 
   </body>
