--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
             <a href="https://github.com/kj7779/css-practice-my-cafe">git hub</a>
             <p class="text-center">CafeのTopページを作成しました。</p>
           </li>
+          <li>
+            <h5 class="content-title">My Gym</h5>
+            <img src="img/my-gym.PNG" alt="my-cafe">
+            <a href="https://kj7779.github.io/css-practice-my-gym/">website</a>
+            <br>
+            <a href="https://github.com/kj7779/css-practice-my-gym">git hub</a>
+            <p class="text-center">Sports GymのTopページ広告/PC View</p>
+          </li>
         </ul>
         <hr>
       </section>
