--- a/index.html
+++ b/index.html
@@ -1,64 +1,81 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Koji's Portfolio</title>
-    <meta name="description" content="Koji's Portfolio">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Koji's Portfolio" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="img/favicon.ico" />
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
-  <div>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Koji's Portfolio</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <div>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Koji's Portfolio</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#my-works">My Works</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#css-practice">CSS Practice</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#experience">Experience</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#language">Language</a>
-            </li>
-          </ul>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#my-works">My Works</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#css-practice">CSS Practice</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#experience">Experience</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#language">Language</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-  </div>
+      </nav>
+    </div>
 
     <main>
-        <img class="main-visual"src="img/mainvisual.jpg" alt="main">
-<!--        <p>Hello, I'm an engineer.</p>-->
+      <img class="main-visual" src="img/mainvisual.jpg" alt="main" />
+      <!--        <p>Hello, I'm an engineer.</p>-->
 
       <section id="about" class="">
         <h2 class="section-title">About</h2>
         <div class="content">
-            <p>
-              Hello. My Name is Koji.<br>
-              I study programing, English, Mandarin and Yoga.<br>
-              I started working in IT industry from last year.<br>
-              I hope to help other person by using my skills.
-            </p>
+          <p>
+            Hello. My Name is Koji.<br />
+            I study programing, English, Mandarin and Yoga.<br />
+            I started working in IT industry from last year.<br />
+            I hope to help other person by using my skills.
+          </p>
         </div>
-        <hr>
+        <hr />
       </section>
 
       <section id="my-works">
@@ -66,36 +83,43 @@
         <ul>
           <li>
             <h5 class="content-title">Diary</h5>
-            <img src="img/diary.PNG" alt="diary">
-            <a href="https://obscure-garden-70339.herokuapp.com/public/diary/list">website</a>
-            <br>
+            <img src="img/diary.PNG" alt="diary" />
+            <a
+              href="https://obscure-garden-70339.herokuapp.com/public/diary/list"
+              >website</a
+            >
+            <br />
             <a href="https://github.com/kj7779/symfony-heroku">git hub</a>
-            <p class="text-center">CafeのTopページを作成しました。</p>
+            <p class="text-center">Symfony, Herokuを使ってDiaryを作成しました。</p>
           </li>
           <li>
-            <a href="http://dry-hiji-8315.deci.jp/myPage/Portfolio/typing_lyric/index.php">
-            <h5 class="content-title">Typing Lyrics Practice</h5>
-            <img src="img/typing.PNG" alt="テキストテキストテキスト">
-            <p>好きな洋楽アーティストの歌詞でタイピング練習できます。</p>
-           </a>
-          </li>
-          <li>
-            <a href="http://dry-hiji-8315.deci.jp/myPage/Portfolio/typing_lyric/index.php">
-            <h5 class="content-title">Wish List</h5>
-            <img src="img/wish-list.PNG" alt="wish-list">
-            <p>サークルなどで欲しいものを共有することができます。</p>
-              <p class="text-center">username:admin<br>password:admin</p>
+            <a
+              href="http://dry-hiji-8315.deci.jp/myPage/Portfolio/typing_lyric/index.php"
+            >
+              <h5 class="content-title">Typing Lyrics Practice</h5>
+              <img src="img/typing.PNG" alt="テキストテキストテキスト" />
+              <p>好きな洋楽アーティストの歌詞でタイピング練習できます。</p>
             </a>
           </li>
           <li>
-            <a href="http://dry-hiji-8315.deci.jp/myPage/Portfolio/webDic_web1.2/webDic_web.php">
-            <h5 class="content-title">English Dictionary</h5>
-            <img src="img/dictionary.PNG" alt="dictionary">
-            <p>英語辞書です。画像がでなくなったので修正中です。</p>
+            <a href="http://dry-hiji-8315.deci.jp/myPage/Portfolio/wishlist/">
+              <h5 class="content-title">Wish List</h5>
+              <img src="img/wish-list.PNG" alt="wish-list" />
+              <p>サークルなどで欲しいものを共有することができます。</p>
+              <p class="text-center">username:admin<br />password:admin</p>
+            </a>
+          </li>
+          <li>
+            <a
+              href="http://dry-hiji-8315.deci.jp/myPage/Portfolio/webDic_web1.2/webDic_web.php"
+            >
+              <h5 class="content-title">English Dictionary</h5>
+              <img src="img/dictionary.PNG" alt="dictionary" />
+              <p>英語辞書です。画像がでなくなったので修正中です。</p>
             </a>
           </li>
         </ul>
-        <hr>
+        <hr />
       </section>
 
       <section id="css-practice">
@@ -103,58 +127,65 @@
         <ul>
           <li>
             <h5 class="content-title">My Cafe</h5>
-            <img src="img/my-cafe.PNG" alt="my-cafe">
+            <img src="img/my-cafe.PNG" alt="my-cafe" />
             <a href="https://kj7779.github.io/css-practice-my-cafe/">website</a>
-            <br>
+            <br />
             <a href="https://github.com/kj7779/css-practice-my-cafe">git hub</a>
             <p class="text-center">CafeのTopページを作成しました。</p>
           </li>
           <li>
             <h5 class="content-title">My Gym</h5>
-            <img src="img/my-gym.PNG" alt="my-cafe">
+            <img src="img/my-gym.PNG" alt="my-cafe" />
             <a href="https://kj7779.github.io/css-practice-my-gym/">website</a>
-            <br>
+            <br />
             <a href="https://github.com/kj7779/css-practice-my-gym">git hub</a>
             <p class="text-center">Sports GymのTopページ広告/PC View</p>
           </li>
+          <li>
+            <h5 class="content-title">Recipe</h5>
+            <img src="img/recipe.png" alt="recipe" />
+            <a href="https://kj7779.github.io/css-recipe/">website</a>
+            <br />
+            <a href="https://github.com/kj7779/css-recipe">git hub</a>
+            <p class="text-center">Recipeサイトのサンプル</p>
+          </li>
         </ul>
-        <hr>
+        <div class="link">
+          <a class="link-btn" href="css-parctice.html">More Works</a>
+        </div>
+        <hr />
       </section>
-
 
       <section id="experience">
         <h2 class="section-title">Experience</h2>
-      <ul>
-        <li>PHP</li>
-        <li>Java Script</li>
-        <li>C</li>
-        <li>Symfony</li>
-        <li>Bootstrap</li>
-        <li>Shopify CLI</li>
-        
-      </ul>
-      <ul>
-        <li>Twitter API</li>
-        <li>Arudino</li>
-        <li>mySQL</li>
-        <li>Heroku</li>
-      </ul>
+        <ul>
+          <li>PHP</li>
+          <li>Java Script</li>
+          <li>C</li>
+          <li>Symfony</li>
+          <li>Bootstrap</li>
+          <li>Shopify CLI</li>
+        </ul>
+        <ul>
+          <li>Twitter API</li>
+          <li>Arudino</li>
+          <li>mySQL</li>
+          <li>Heroku</li>
+        </ul>
       </section>
 
       <section id="language" class="wrapper">
         <h2 class="section-title">Language</h2>
-      <ul>
-        <li>English</li>
-        <li>Chinese</li>
-        <li>Japanese</li>
-      </ul>
-      </section>  
+        <ul>
+          <li>English</li>
+          <li>Chinese</li>
+          <li>Japanese</li>
+        </ul>
+      </section>
     </main>
 
     <footer class="footer">
       <p>&copy; 2023 Koji's Portfolio</p>
     </footer>
-
   </body>
-
 </html>
