--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
             <a href="https://github.com/kj7779/css-recipe">git hub</a>
             <p class="text-center">Recipeサイトのサンプル</p>
           </li>
+          <li>
+            <h5 class="content-title"></h5>
+            <a href="">準備中</a>
+          </li>
         </ul>
         <div class="link">
           <a class="link-btn" href="css-parctice.html">More Works</a>
